Added parking garage name attribute to database.
